# TraversingTheGates

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
assets/shaders/: core.fs  core.vs  inverse.fs  tex_atlased_core.vs  transparency.fs
src/: GameLoop.cpp  GameLoop.h  Globals.cpp  Globals.h  camera.cpp  camera.h  gameObject.cpp  gameObject.h  material.h  mesh.h  projection.cpp  projection.h  quad.h  shader.cpp  shader.h  timer.cpp  timer.h  transform.h  view.cpp  view.h
src/LevelGeneration/: DungeonLevelGenerator.cpp  DungeonLevelGenerator.h  Generation.h  LevelBlueprint.h  LevelData.cpp  LevelData.h  MapPosition.h  Navmesh.cpp  Navmesh.h  RoomData.h  TileTypes.h
src/LevelGeneration/stage1/: DungeonLevelGenerator.cpp  DungeonLevelGenerator.h  DungeonLevelSpawner.cpp  DungeonLevelSpawner.h  LevelGenerator.cpp  LevelGenerator.h
src/components/: Camera.h  CameraData.h  DoorData.h  EnemyNPCData.h  GameComponents.h  MeshRenderData.h  NavigationData.h  OrientedSprite.h  Transform.cpp  Transform.h
src/ecs/: API.h  ECSAPI.h  ECSEngine.cpp  ECSEngine.h  EventAPI.h  IEntity.h  entity.h
src/ecs/ECSEngine/: ComponentManagerAccess.cpp  ComponentManagerAccess.h  ECEngine.cpp  ECSEngine.cpp  ECSEngine.h  EntityManagerAccess.cpp  EntityManagerAccess.h  EventManagerAccess.cpp  EventManagerAccess.h  SystemEngine.cpp
src/ecs/component/: Component.h  ComponentCluster.h  ComponentIterator.h  ComponentManager.cpp  ComponentManager.h  IComponent.cpp  IComponent.h  componentCluster.h  componentIterator.h  componentManager.cpp  componentManager.h
src/ecs/entity/: Entity.h  EntityIterator.h  EntityManager.cpp  EntityManager.h  IEntity.cpp  IEntity.h  entity.h  entityIterator.h  entityManager.cpp  entityManager.h
src/ecs/events/: Event.h  EventDelegate.h  EventDispatcher.h  EventManager.h  IEvent.h  IEventDelegate.h  IEventDispatcher.h  IEventSubscriber.h  IEventSubscriber.hpp  event.h  event.hpp  eventDelegate.h  eventManager.h  eventManager.hpp  eventSubscriptionBind.h  eventType.hpp  (+2 more)
src/engine/: GameEngine.h
src/entities/: Camera.cpp  Camera.h  Door.cpp  Door.h  GameEntities.h  Player.cpp  Player.h  SkeletonNPC.cpp  SkeletonNPC.h  Tile.cpp  Tile.h  Wall.cpp  Wall.h
src/events/: Event.h  EventDelegate.h  EventDispatcher.h  EventManager.h  GameEvents.h  IEvent.h  IEventDelegate.h
src/game/: gameEvents.h
src/global/: GlobalData.h  GlobalGLData.h
src/interactionLogic/: DoorInteraction.cpp  DoorInteraction.h  GameInteractives.h  IInteractive.h  TileInteraction.cpp  TileInteraction.h  WallInteraction.cpp  WallInteraction.h
src/matrices/: Projection.cpp  Projection.h  View.cpp  View.h
src/meshes/: Mesh.h  Quad.h
src/others/: Direction.h  Random.h  SpriteDirection.h
src/setupManagers/: ECSObjectsSetup.h  GLsetup.h  GameObjectsSetup.h  StackModifier.h  TextureLoader.h
src/shaders/: Shader.cpp  core.vs  inverse.fs
src/systems/: CameraMovement.cpp  CameraMovement.h  EnemyAI.cpp  EnemyAI.h  GameSystems.h  InteractionManager.cpp  InteractionManager.h  LevelGenerationManager.cpp  LevelGenerationManager.h  LevelMap.cpp  LevelMap.h  LevelSetup.cpp  LevelSetup.h  MapReposition.cpp  MapReposition.h  PlayerInteraction.cpp  PlayerInteraction.h  PlayerKick.cpp  PlayerKick.h  PlayerMovement.cpp  PlayerMovement.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  SpriteDirectionFlip.cpp  SpriteDirectionFlip.h  TextureManager.cpp  TextureManager.h  UserInput.cpp  UserInput.h
src/textures/: Texture.h
src/time/: Timer.cpp
src/utility/: Logging.cpp  Logging.h  Math.h  Type.h  logging.h  math.h  type.h  typeHelper.h
tests/: MainTest.cpp  MainTest.h
tests/engine/: Test.cpp  Test.h
utests/: eventTests.cpp  unitTests.h
(+45 files in other folders)
